# yy-home

./: .env.local  .gitignore  pyproject.toml  pyrightconfig.json
src/yyhome/: di_container.py  main.py
src/yyhome/adapters/inbound/http/routers/v1/: elevator_router.py
src/yyhome/adapters/inbound/http/routers/v1/schemas/: elevator_response.py
src/yyhome/adapters/outbound/external_api/: gayo_client.py
src/yyhome/adapters/outbound/external_api/schemas/: gayo_request.py  gayo_response.py
src/yyhome/application/auth/: jwt_service.py
src/yyhome/application/service/: elevator_service.py
src/yyhome/common/router/: routers.py
src/yyhome/config/: logging_config.py  settings.py
src/yyhome/exceptions/: http_status_exception.py
src/yyhome/middleware/: exception_handler.py
src/yyhome/ports/inbound/: elevator_port.py
src/yyhome/ports/outbound/: gayo_port.py
src/yyhome/schema/: camel_case_base_model.py  elevator_api_schema.py
